<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragment.ChequeScanFragment"
    tools:showIn="@layout/activity_principal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="2"
                android:gravity="fill_horizontal">
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_column="1"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lblFrontal"
                        android:text="@string/lblFrontal"


                        />

                    <ImageView
                        android:id="@+id/imageViewFrente"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/picture"
                        android:layout_margin="5dp"
                        android:visibility="visible"
                        android:background="@drawable/pic_border"
                        android:src="@android:drawable/ic_menu_camera"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="false"
                        android:minHeight="@android:dimen/thumbnail_height" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_column="2"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblTrasero"
                        android:id="@+id/lblTrasero"


                        />

                    <ImageView
                        android:id="@+id/imageViewTrasera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/picture"
                        android:layout_margin="5dp"
                        android:visibility="visible"
                        android:background="@drawable/pic_border"
                        android:src="@android:drawable/ic_menu_camera"
                        android:scaleType="fitCenter"
                        android:minHeight="@android:dimen/thumbnail_height" />







                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="2"
                android:gravity="center_horizontal"
                >

                <Button android:text="@string/btnFrontal" android:id="@+id/btnIntend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"

                    android:layout_weight="1" />

                <Button android:text="@string/btnReverso" android:id="@+id/btnIntendS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_column="1"
                    android:layout_weight="1" />




            </TableRow>



        </TableLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/divMonto"

            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/lblMonto"
                android:imeOptions="actionDone"
                android:textSize="30dp"
                android:layout_weight="0.3"


                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txtMonto"
                android:layout_width="wrap_content"
                android:layout_weight="1.7"
                android:inputType="numberDecimal"

                android:layout_height="wrap_content" />
        </LinearLayout>



        
        <LinearLayout
            android:layout_width="match_parent"

            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <Button
                android:layout_width="match_parent"
                android:text="@string/txtContinuar"
                android:id="@+id/btnContinuar"
                android:layout_gravity="center_horizontal|center"
                android:layout_height="wrap_content"
                android:enabled="false" />


        </LinearLayout>





    </LinearLayout>



</RelativeLayout>
